# windows-store-apps-portfolio

./: .gitignore  README.md  index.html
.github/workflows/: build-app01.yml
01/: index.html  manifest.json
01/assets/: index-5uRctzOy.css  index-BQ61YObS.js
02/: index.html  manifest.json
02/assets/: index-BUvaQQhI.js  index-BwysqJdG.css
03/: index.html
03/assets/: index-Dzp49GCk.js  index-qsr90Tbx.css
04/: index.html  sw.js
04/assets/: index-BcTPZjZq.css  index-paJDeDcD.js
05/: index.html  sw.js
05/assets/: index-B0944nox.js  index-BrGNnOTE.css
06/: index.html  sw.js
06/assets/: index-DQvRgWNA.js  index-q3ISVHmk.css
07/: index.html  manifest.json
07/assets/: index-Drnv1uIQ.css  index-HdhsyMEW.js
08/: index.html  sw.js
08/assets/: index-B2Oq-Zk-.css  index-Cy8whRKR.js
apps/01-pdf-ocr-desk/: .gitignore  CHECKLIST.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/01-pdf-ocr-desk/metadata/: feature_graphic_prompt.md  icon_prompt.md  microsoft_store_metadata.md  paid_value_notes.md  privacy_policy.md  product_concept.md  screenshots_prompt.md  terms_of_use.md
apps/01-pdf-ocr-desk/public/: sw.js
apps/01-pdf-ocr-desk/src/: App.tsx  index.css
apps/01-pdf-ocr-desk/src-tauri/: Cargo.toml  tauri.conf.json
apps/01-pdf-ocr-desk/src-tauri/src/: lib.rs  main.rs
apps/02-pdf-master-kit/: CHECKLIST.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/02-pdf-master-kit/metadata/: feature_graphic_prompt.md  icon_prompt.md  microsoft_store_metadata.md  paid_value_notes.md  privacy_policy.md  product_concept.md  screenshots_prompt.md  terms_of_use.md
apps/02-pdf-master-kit/public/: sw.js
apps/02-pdf-master-kit/src/: App.tsx  index.css
apps/02-pdf-master-kit/src-tauri/: Cargo.toml  tauri.conf.json
apps/03-file-rename-factory/: CHECKLIST.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/03-file-rename-factory/metadata/: feature_graphic_prompt.md  icon_prompt.md  microsoft_store_metadata.md  paid_value_notes.md  privacy_policy.md  product_concept.md  screenshots_prompt.md  terms_of_use.md
apps/03-file-rename-factory/public/: manifest.json  sw.js
apps/03-file-rename-factory/src/: App.tsx
apps/03-file-rename-factory/src-tauri/: Cargo.toml  tauri.conf.json
apps/03-file-rename-factory/src-tauri/src/: lib.rs  main.rs
apps/04-invoice-pdf-builder/: CHECKLIST.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/04-invoice-pdf-builder/metadata/: feature_graphic_prompt.md  icon_prompt.md  microsoft_store_metadata.md  paid_value_notes.md  privacy_policy.md  product_concept.md  screenshots_prompt.md  terms_of_use.md
apps/04-invoice-pdf-builder/src-tauri/: Cargo.toml  tauri.conf.json
apps/04-invoice-pdf-builder/src-tauri/src/: lib.rs  main.rs
apps/05-qr-barcode-studio/: CHECKLIST.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/05-qr-barcode-studio/src-tauri/: Cargo.toml  tauri.conf.json
apps/05-qr-barcode-studio/src-tauri/src/: lib.rs  main.rs
apps/06-clipboard-vault-pro/: CHECKLIST.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/07-duplicate-file-finder/: CHECKLIST.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/07-duplicate-file-finder/src-tauri/: Cargo.toml  tauri.conf.json
apps/07-duplicate-file-finder/src-tauri/src/: lib.rs  main.rs
apps/08-product-listing-builder/: CHECKLIST.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/08-product-listing-builder/src-tauri/: Cargo.toml  tauri.conf.json
apps/08-product-listing-builder/src-tauri/src/: lib.rs  main.rs
scripts/: build-app.ps1  check-app.ps1  clean-app.ps1  create-app.ps1  create-template.ps1  install-app.ps1  package-app.ps1  run-app.ps1
(+196 files in other folders)
