[package]
name = "pdf_ocr_desk"
version = "1.0.0"
description = "PDF OCR Desk — Text extraction for images and PDFs"
authors = ["KART L"]
edition = "2021"

[lib]
name = "pdf_ocr_desk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
