[package]
name = "qr_barcode_studio"
version = "1.0.0"
description = "QR Barcode Studio — Generate QR codes and 1D barcodes, export PNG and SVG"
authors = ["KART L"]
edition = "2021"

[lib]
name = "qr_barcode_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
